[project]
name = "aiosqlitepool"
version = "0.1.0"
description = "A robust, high-performance asynchronous connection pool for SQLite."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Framework :: AsyncIO",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/slaily/aiosqlitepool"
"Bug Tracker" = "https://github.com/slaily/aiosqlitepool/issues"
"Source Code" = "https://github.com/slaily/aiosqlitepool"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
