[project]
name = "aiosqlitepool"
version = "1.0.0-beta.1"
description = "A robust, high-performance asynchronous connection pool for SQLite."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Iliyan Slavov", email = "iliyan.n.slavov@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Framework :: AsyncIO",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/slaily/aiosqlitepool"
"Bug Tracker" = "https://github.com/slaily/aiosqlitepool/issues"
"Source Code" = "https://github.com/slaily/aiosqlitepool"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
